[package]
name = "peerrs-binarypack"
version = "0.1.0"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aneeshdurg/hostfile"
repository = "https://github.com/aneeshdurg/hostfile"
description = "A rust implementation of js-binarypack"
keywords = ["peerjs", "messagepack"]
categories = ["web-programming", "parsing", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
num = "0.2"
